# NeuroMetrics

./: .gitmodules  CMakeLists.txt  README.md
include/NeuroMetrics/: brute_force.hxx  converter.hxx  metrics.hxx  metrics_class.hxx  rand-score.hxx  weighted_metrics.hxx
include/NeuroMetrics/tools/: block_access.hxx  for_each_block.hxx  for_each_coordinate.hxx  marray_helper.hxx  parallel_max_element.hxx  threadpool.hxx
include/neuro_metrics/: partition-comparison.hxx
python/: CMakeLists.txt  py_compare.cxx
python/python_module/: __init__.py
python/python_src/: CMakeLists.txt  py_compare.cxx  py_metrics.cxx  py_module.cxx
test/: generate_test_data.hxx
